<resources>
    <string name="app_name">KoRe</string>
    <string name="select_thisfolder">Select this folder</string>
    <string name="cancel">Cancel</string>
    <string name="no_storage_found">Not found any storage</string>
    <string name="swipe_left">Swipe Left</string>
    <string name="swipe_right">Swipe Right</string>
    <string name="swipe_up">Swipe Up</string>
    <string name="swipe_down">Swipe Down</string>
    <string name="click_in_zone">Click %1$d in %2$s</string>
    <string name="doubleclick_in_zone">Double Click in %1$s</string>
    <string name="page_info_text_left">%1$d / %2$d (%3$d%%)</string>
    <string name="page_info_text_right">%1$d / %2$d (%3$d)</string>
    <string name="page_info_text_time">%1$s / %2$d %%</string>
    <string name="openfile">Open File</string>
    <string name="textSizeExampleText" translatable="false">ABCabc</string>
    <string name="settings">Settings</string>
    <string name="choose_file">Choose file</string>
    <string name="info">Info</string>
    <string name="go_to_storage">Go to Storage</string>
    <string name="add_to_storage">Add a entry to Storage</string>
    <string name="back">Back</string>
    <string name="reload">Reload</string>
    <string name="text">Text</string>
    <string name="position">Position</string>
    <string name="no_bookmarks">No Bookmarks</string>
    <string name="icon">Icon</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="path">Path</string>
    <string name="bookmarklist">Bookmarklist</string>
    <string name="add_bookmark">Add bookmark</string>
    <string name="go_to">GoTo</string>
    <string name="section">Section</string>
    <string name="page">Page</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="save">Save</string>
    <string name="textsize">Text size</string>
    <string name="decrease">decrease</string>
    <string name="example_abcabc" translatable="false">ABCabc</string>
    <string name="increase">increase</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="last_opened">Last opened</string>
    <string name="close">Close</string>
    <string name="main_menu">Main menu</string>
    <string name="no_book">no book</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="open">Open</string>
    <string name="delete">Delete</string>
    <string name="readbook">Read book</string>
    <string name="deletebook">Delete book file</string>
    <string name="note">Note</string>
    <string name="bookinfo">Book info</string>
    <string name="toc">Table of content</string>
    <string name="text_normal">Normal</string>
    <string name="text_bold">Bold</string>
    <string name="text_italic">Italic</string>
    <string name="text_bolditalic">Bold Italic</string>
    <string name="text_monospace">Monospace</string>
    <string name="interface_header">Interface</string>
    <string name="interface_light_header">Day Theme</string>
    <string name="interface_dark_header">Night Theme</string>
    <string name="color_theme_header">Color Theme</string>
    <string name="text_header">Text</string>
    <string name="font_header">Font</string>
    <string name="interface_theme_header">Interface</string>
    <string name="interface_theme_title">Theme</string>
    <string name="brightness_title">Brightness</string>
    <string name="orientation_title">Orientation</string>
    <string name="InterfaceDark">Dark</string>
    <string name="InterfaceLight">Light</string>
    <string name="InterfaceAutoSystem">Auto System</string>
    <string name="brightness_values_system">System</string>
    <string name="brightness_values_manual">Manual</string>
    <string name="orientation_values_sensor">Sensor</string>
    <string name="orientation_values_portrait">Portrait</string>
    <string name="orientation_values_portrait_sensor">Portrait Sensor</string>
    <string name="orientation_values_landscape">Landscape</string>
    <string name="orientation_values_landscape_sensor">Landscape Sensor</string>
    <string name="color_background">Backgroud</string>
    <string name="color_foreground">Text color</string>
    <string name="color_linktext">Link color</string>
    <string name="color_infotext">Text color in info area</string>
    <string name="default_color">Reset to default color</string>
    <string name="color_theme_indexed_header">Theme %1$s</string>
    <string name="color_theme1_header">Theme 1</string>
    <string name="color_theme2_header">Theme 2</string>
    <string name="color_theme3_header">Theme 3</string>
    <string name="color_theme4_header">Theme 4</string>
    <string name="color_theme5_header">Theme 5</string>
    <string name="color_theme_backgroundimage_header">Background image</string>
    <string name="color_theme1_backgroud_default" translatable="false">#FBF0D9</string>
    <string name="color_theme1_foregroud_default" translatable="false">#5F4B32</string>
    <string name="color_theme1_linktext_default" translatable="false">#2196F3</string>
    <string name="color_theme2_backgroud_default" translatable="false">#000000</string>
    <string name="color_theme2_foregroud_default" translatable="false">#FBF0D9</string>
    <string name="color_theme2_linktext_default" translatable="false">#2196F3</string>
    <string name="color_theme3_backgroud_default" translatable="false">#3e1104</string>
    <string name="color_theme3_foregroud_default" translatable="false">#e57614</string>
    <string name="color_theme3_linktext_default" translatable="false">#005CA6</string>
    <string name="color_theme4_backgroud_default" translatable="false">#000000</string>
    <string name="color_theme4_foregroud_default" translatable="false">#008705</string>
    <string name="color_theme4_linktext_default" translatable="false">#00599F</string>
    <string name="color_theme5_backgroud_default" translatable="false">#000000</string>
    <string name="color_theme5_foregroud_default" translatable="false">#8C8A83</string>
    <string name="color_theme5_linktext_default" translatable="false">#3D7198</string>
    <string name="font_name_title">Font name</string>
    <string name="textsize_title">Text Size</string>
    <string name="linespacing_title">Line Spacing</string>
    <string name="letterspacing_title">Letter Spacing</string>
    <string name="showSystemFonts_title">Show System Fonts</string>
    <string name="show_noto_fonts_title">Show Noto Fonts</string>
    <string name="tapzones_header">Tap Zones</string>
    <string name="tapzones_one_click_header">One Click</string>
    <string name="tapzones_double_click_header">Double Click</string>
    <string name="tapzones_info_area_click_header">Info Area</string>
    <string name="tapzone_top_left">top left</string>
    <string name="tapzone_top_center">top center</string>
    <string name="tapzone_top_right">top right</string>
    <string name="tapzone_middle_left">middle left</string>
    <string name="tapzone_middle_center">middle center</string>
    <string name="tapzone_middle_right">middle right</string>
    <string name="tapzone_bottom_left">bottom left</string>
    <string name="tapzone_bottom_center">bottom center</string>
    <string name="tapzone_bottom_right">bottom right</string>
    <string name="tapzone_left">left</string>
    <string name="tapzone_center">center</string>
    <string name="tapzone_right">right</string>
    <string name="tapzones_activity_none">none</string>
    <string name="tapzones_activity_page_prev">previous page</string>
    <string name="tapzones_activity_page_next">next page</string>
    <string name="tapzones_activity_quick_menu">quick menu</string>
    <string name="tapzones_activity_main_menu">main menu</string>
    <string name="tapzones_activity_goto">go to…</string>
    <string name="tapzones_activity_bookmarks">bookmarks</string>
    <string name="tapzones_activity_open_file">open file</string>
    <string name="tapzones_activity_last_opened">last opened</string>
    <string name="tapzones_activity_library">library</string>
    <string name="tapzones_activity_opds">opds</string>
    <string name="tapzones_activity_settings">settings</string>
    <string name="line_spacing">Line Spacing</string>
    <string name="letter_spacing">Letter Spacing</string>
    <string name="textsize_sample">ABCabc</string>
    <string name="font_select_help">place custom fonts in folder: internal_storage/Android/data/com.kontranik.koreader/files/fonts/</string>
    <string name="font_select_title">Select font</string>
    <string name="no_page_content">no page content</string>
    <string name="loading_book">loading Book…</string>
    <string name="can_not_load_book">can not load book %1$s</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="open_book">Open a book</string>
    <string name="bookmark_saved">Bookmark saved</string>
    <string name="color_theme_show_background_image">show background image</string>
    <string name="color_theme_selected_image">selected image</string>
    <string name="repeat_tiled_image">repeat tiled image</string>
    <string name="marginTop">Margin Top</string>
    <string name="marginBottom">Margin between text and info area</string>
    <string name="marginRight">Margin Right</string>
    <string name="marginLeft">Margin Left</string>
    <string name="default_margin_value" translatable="false">16</string>
    <string name="title_delete_book">Delete book</string>
    <string name="sure_delete_book">Are you sure to delete this book</string>
    <string name="ok_delete_book">Delete</string>
    <string name="title_delete_storage">Delete storage</string>
    <string name="sure_delete_storage">Are you sure to delete this storage</string>
    <string name="title_delete_scanpoint">Delete scanpoint</string>
    <string name="sure_delete_scanpoint">Are you sure to delete this scanpoint</string>
    <string name="ok_delete_storage">Delete</string>
    <string name="title_select_storage">Select storage</string>
    <string name="sure_select_storage">Select storage in next dialog and grand access</string>
    <string name="title_select_scanpoint">Select scan point</string>
    <string name="sure_select_scanpoint">Select scan point in next dialog and grand access</string>
    <string name="ok_select_storage">OK</string>
    <string name="toggle_invert">Toggle Invert</string>
    <string name="color_theme">Color theme</string>
    <string name="channel_name_library">KoRe Library Notification</string>
    <string name="channel_description_library">Description fo Library Notification Channel</string>
    <string name="library_delete_item_dialog_title">Delete library item</string>
    <string name="library_delete_item_dialog_message">Are you sure to delete this library entry</string>
    <string name="undo_delete_snackbar_message">Undo delete</string>
    <string name="undo_delete_undo_action">Undo</string>
    <string name="clear_library">clear library</string>
    <string name="add_scan_point">add scan point</string>
    <string name="refresh">Refresh</string>
    <string name="library_settings">Library settings</string>
    <string name="refresh_library">Refresh library</string>
    <string name="are_you_sure_to_refresh_the_library">are you sure to refresh the library?</string>
    <string name="refresh_ok_button">Refresh</string>
    <string name="start_refresh">Start refresh…</string>
    <string name="clear_library_alert_title">Clear library</string>
    <string name="are_you_sure_to_clear_the_whole_library">are you sure to clear the whole library?</string>
    <string name="clear_library_ok_button">Clear</string>
    <string name="delete_scan_point">Delete scan point</string>
    <string name="library_are_you_sure_to_delete_this_scan_point">are you sure to delete this scan point</string>
    <string name="delete_scan_point_ok_button">Delete</string>
</resources>