<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:preference="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <PreferenceCategory
        app:title="@string/text_header"
        app:iconSpaceReserved="false"
        >

        <com.kontranik.koreader.utils.TextSizePreference
            app:key="textSize"
            app:title="@string/textsize_title"
            app:iconSpaceReserved="false" />

        <ListPreference
            app:key="LineSpacing"
            app:defaultValue="1.15"
            app:entries="@array/line_spacing_entries"
            app:entryValues="@array/line_spacing_values"
            app:icon="@drawable/ic_baseline_format_line_spacing_24"
            app:title="@string/linespacing_title"
            app:useSimpleSummaryProvider="true"
            />

        <ListPreference
            app:key="LetterSpacing"
            app:defaultValue="0.01"
            app:entries="@array/letter_spacing_entries"
            app:entryValues="@array/letter_spacing_values"
            app:icon="@drawable/ic_letter_spacing"
            app:title="@string/letterspacing_title"
            app:useSimpleSummaryProvider="true"
            />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/font_header"
        app:iconSpaceReserved="false"
        >

        <SwitchPreference
            app:key="showSystemFonts"
            app:title="@string/showSystemFonts_title"
            app:iconSpaceReserved="false"
            />

        <SwitchPreference
            app:key="showNotoFonts"
            app:title="@string/show_noto_fonts_title"
            app:iconSpaceReserved="false"
            app:dependency="showSystemFonts"
            />

        <com.kontranik.koreader.utils.FontPickerPreference
            app:key="fontPickerNormal"
            fonttype="normal"
            android:title="@string/text_normal"
            app:singleLineTitle="true"
            app:iconSpaceReserved="false" />

        <com.kontranik.koreader.utils.FontPickerPreference
            app:key="fontPickerBold"
            fonttype="bold"
            android:title="@string/text_bold"
            app:singleLineTitle="true"
            app:iconSpaceReserved="false" />

        <com.kontranik.koreader.utils.FontPickerPreference
            app:key="fontPickerItalic"
            fonttype="italic"
            android:title="@string/text_italic"
            app:singleLineTitle="true"
            app:iconSpaceReserved="false" />

        <com.kontranik.koreader.utils.FontPickerPreference
            app:key="fontPickerBoldItalic"
            fonttype="bolditalic"
            android:title="@string/text_bolditalic"
            app:singleLineTitle="true"
            app:iconSpaceReserved="false" />

        <com.kontranik.koreader.utils.FontPickerPreference
            app:key="fontPickerMonospace"
            fonttype="monospace"
            android:title="@string/text_monospace"
            app:singleLineTitle="true"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>


</PreferenceScreen>