<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <ListPreference
        app:key="selected_theme"
        app:entries="@array/selected_theme_entries"
        app:entryValues="@array/selected_theme_values"
        app:defaultValue="1"
        app:title="@string/color_theme_header"
        app:icon="@drawable/ic_iconmonstr_paintbrush_10"
        app:useSimpleSummaryProvider="true" />

    <Preference
        app:key="color_theme1_preference"
        app:title="@string/color_theme1_header"
        app:iconSpaceReserved="false"
        app:fragment="com.kontranik.koreader.ui.fragments.SettingsFragment$ColorTheme1SettingsFragment"
        />

    <Preference
        app:key="color_theme2_preference"
        app:title="@string/color_theme2_header"
        app:iconSpaceReserved="false"
        app:fragment="com.kontranik.koreader.ui.fragments.SettingsFragment$ColorTheme2SettingsFragment"
        />

    <Preference
        app:key="color_theme3_preference"
        app:title="@string/color_theme3_header"
        app:iconSpaceReserved="false"
        app:fragment="com.kontranik.koreader.ui.fragments.SettingsFragment$ColorTheme3SettingsFragment"
        />

    <Preference
        app:key="color_theme4_preference"
        app:title="@string/color_theme4_header"
        app:iconSpaceReserved="false"
        app:fragment="com.kontranik.koreader.ui.fragments.SettingsFragment$ColorTheme4SettingsFragment"
        />

    <Preference
        app:key="color_theme5_preference"
        app:title="@string/color_theme5_header"
        app:iconSpaceReserved="false"
        app:fragment="com.kontranik.koreader.ui.fragments.SettingsFragment$ColorTheme5SettingsFragment"
        />

</PreferenceScreen>